--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ mysql:
     volumes_from:
         - data
     environment:
-        MYSQL_ROOT_PASSWORD: secret
+        MYSQL_ROOT_PASSWORD: root
         MYSQL_DATABASE: project
         MYSQL_USER: project
         MYSQL_PASSWORD: project
